--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -17,6 +17,11 @@
             android:icon="@drawable/ic_movies"
             android:title="@string/nav_movies" />
 
+        <item android:id="@+id/nav_traffic"
+            android:icon="@drawable/ic_traffic"
+            android:title="@string/nav_traffic" />
+
+
     </group>
 
     <item android:title="More">
