--- a/app/src/main/res/layout/activity_show_traffic.xml
+++ b/app/src/main/res/layout/activity_show_traffic.xml
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_editor_absoluteX="0dp" />
 </LinearLayout>
